# flut

./: .gitignore  COMMAND_POOL_IMPLEMENTATION_PLAN.md  Cargo.toml  DESIGN.md  README.md  RECTANGLE_RENDERING_IMPLEMENTATION_PLAN.md  RECTANGLE_RENDERING_SUMMARY.md  SWAPCHAIN_RECREATION_PLAN.md  build.rs  rustfmt.toml
.cargo/: config.dev.toml  config.toml
.github/workflows/: .gitkeep  deploy.yml  release.yml
apps/worm/: Cargo.toml  build.rs
apps/worm/lib/: Cargo.toml
apps/worm/lib/src/: consts.rs  level.rs  lib.rs  utils.rs
apps/worm/lib/src/models/: air.rs  countdown.rs  directed_edges.rs  direction.rs  game_cell.rs  game_cell_type.rs  mod.rs  worm_cell.rs
apps/worm/lib/src/states/: dialog_shown.rs  mod.rs  playing.rs  preparing.rs  shaking.rs  showing_dialog.rs
apps/worm/src/: game.rs  main.rs
assets/fonts/: MaterialSymbolsOutlined[FILL,GRAD,opsz,wght].codepoints
docs/: button_animation_sm.drawio  design.drawio  dialog_animation_sm.drawio  dialog_animation_state_machine.drawio  select_animation_sm.drawio  shake_animation_sm.drawio  shake_animation_state_machine.drawio  widget_tree_design.md  widget_tree_state_machine.drawio
examples/avoid_the_bomb/: main.rs
examples/avoid_the_bomb/i18n/: en.rs  id.rs  mod.rs  zh_cn.rs  zh_tw.rs
examples/avoid_the_bomb/models/: difficulty.rs  game_cell.rs  game_cell_state.rs  game_state.rs  mod.rs
examples/avoid_the_bomb/pages/: game_page.rs  home_page.rs  mod.rs
examples/avoid_the_bomb/widgets/: back_confirm_dialog.rs  game_over_dialog.rs  mod.rs  you_won_dialog.rs
examples/void/: consts.rs  game.rs  main.rs
examples/void/models/: event.rs
examples/void/widgets/: counter_button.rs  mod.rs
examples/worm/: consts.rs  game.rs  main.rs  worm_game.rs
examples/worm/i18n/: en.rs  id.rs  mod.rs  zh_cn.rs  zh_tw.rs
examples/worm/models/: air.rs  direction.rs  food.rs  game_cell.rs  mod.rs  score.rs  wall.rs  worm.rs  worm_cell.rs
examples/worm/pages/: game_page.rs  home_page.rs
examples/worm/widgets/: game_over_dialog.rs  mod.rs
flut_codegen/: Cargo.toml
flut_codegen/src/: lib.rs
flut_macro/: Cargo.toml
flut_macro/src/: lib.rs  log.rs
glsl/: basic.frag  basic.vert  glyph.frag  glyph.vert  rect.frag  rect.vert  round_rect.frag  round_rect.vert
src/: app.rs  app_loop.rs  audio.rs  audio_manager.rs  batch.rs  clock.rs  consts.rs  context.rs  engine.rs  font_atlas.rs  glyph_renderer.rs  graphics_pipeline.rs  id_generator.rs  lib.rs  model_sync.rs  renderer.rs  renderer_ref.rs  sampled_image.rs  sdf.rs  shader.rs  shaders.rs  storage_buffer.rs  string_slice.rs  text_renderer.rs  transition.rs  utils.rs  vk_buffer.rs  vk_engine.rs  widget_tree.rs  write.rs
src/animations/: shake.rs
src/atlases/: font_atlas.rs  icon_atlas.rs  mod.rs
src/batches/: glyph_batch.rs  mod.rs  rect_batch.rs  round_rect_batch.rs
src/boot/: asset.rs  audio.rs  context.rs  mod.rs
src/buffers/: mod.rs  static_buffer.rs  stream_buffer.rs
src/collections/: lru_cache.rs  mod.rs  sparse_set.rs  sparse_vec.rs  string_slice.rs  u16_sparse_set.rs
src/gfx/: mod.rs  shake.rs
src/helpers/: animation.rs  animation_count.rs  clock.rs  consts.rs  context.rs  i18n.rs  mod.rs  shake_animation.rs  shake_animation_sm.rs  timer.rs  transition.rs
src/images/: dynamic_image.rs  mod.rs  static_image.rs
src/models/: align.rs  anchor.rs  asset_req.rs  asset_task.rs  atlas_sizes.rs  audio_req.rs  audio_task.rs  container.rs  font_cfg.rs  font_key.rs  glass.rs  glyph.rs  glyph_key.rs  glyph_metrics.rs  glyphs.rs  horizontal_align.rs  icon.rs  icon_name.rs  lang.rs  locale.rs  mod.rs  model_capacities.rs  origin.rs  pulse_event.rs  push_consts.rs  range.rs  rect.rs  rect_push_const.rs  round_rect.rs  round_rect_part.rs  route.rs  text.rs  text_id.rs  text_style.rs  value.rs  vertical_align.rs  write.rs
src/pipelines/: basic_pipeline.rs  glyph_pipeline.rs  mod.rs  model.rs  rect_pipeline.rs  round_rect_pipeline.rs
src/renderers/: mod.rs  model_renderer.rs  rect_renderer.rs  renderer.rs  renderer_ref.rs  text_renderer.rs
src/shaders/: basic_frag_shader.rs  basic_vert_shader.rs  glyph.frag  glyph.vert  glyph_frag_shader.rs  glyph_vert_shader.rs  mod.rs  rect.vert  rect_frag_shader.rs  rect_vert_shader.rs  round_rect.frag  round_rect.vert  shader.frag  shader.vert
src/utils/: audio_manager.rs  clock.rs  mod.rs  sdf.rs
src/vk/: consts.rs  device.rs  dynamic_image.rs  graphics_pipeline.rs  mod.rs  renderer.rs  static_image.rs  stream_buffer.rs
src/vk/batches/: mod.rs  rect_batch.rs  write.rs
src/widgets/: bar.rs  buildable.rs  builder_widget.rs  button.rs  center.rs  column.rs  container.rs  dialog.rs  glass.rs  grid.rs  icon.rs  image_button.rs  image_widget.rs  mod.rs  painter_widget.rs  rect_widget.rs  ripple.rs  router.rs  row.rs  scale.rs  select.rs  spacing.rs  stack.rs  stack_child.rs  stateful_widget.rs  stateless_widget.rs  text.rs  text_block.rs  translation.rs  widget.rs
tests/: lib_test.rs  mod.rs  utils_test.rs
tests/collections/: lru_cache_test.rs  mod.rs  sparse_set_test.rs
