[package]
name = "flut_macro"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/ii887522/flut"
rust-version = "1.88"

[profile.dev]
split-debuginfo = "packed"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
split-debuginfo = "packed"
strip = true

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0", default-features = false }
rustc-hash = { version = "2.1", default-features = false, features = ["std"] }

[dependencies.syn]
version = "2.0"
default-features = false
features = ["parsing", "printing", "proc-macro"]
